Support Kotlin delegates in #withPrefabValuesForFields